--- a/Balance/Balance/Balance.csproj
+++ b/Balance/Balance/Balance.csproj
@@ -125,7 +125,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\CreditModel.cs" />
-    <Compile Include="Models\GroupModel.cs" />
+    <Compile Include="Models\AddGroupModel.cs" />
     <Compile Include="Models\IndexModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\IndexViewModel.cs" />
