--- a/Balance/Balance/Balance.csproj
+++ b/Balance/Balance/Balance.csproj
@@ -126,6 +126,7 @@
     </Compile>
     <Compile Include="Models\CreditModel.cs" />
     <Compile Include="Models\AddGroupModel.cs" />
+    <Compile Include="Models\GroupListItemModel.cs" />
     <Compile Include="Models\IndexModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\IndexViewModel.cs" />
