--- a/Balance/Balance/Balance.csproj
+++ b/Balance/Balance/Balance.csproj
@@ -136,10 +136,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AddGroupModel.cs" />
-    <Compile Include="Models\GroupModel.cs" />
-    <Compile Include="Models\IndexModel.cs" />
-    <Compile Include="Models\PaymentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AddGroupViewModel.cs" />
     <Compile Include="ViewModels\GroupViewModel.cs" />
@@ -193,6 +189,16 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\..\Desktop\ModelAbstractions\ModelAbstractions.csproj">
+      <Project>{8158cb35-ea38-4e55-ba8a-56867c063cf6}</Project>
+      <Name>ModelAbstractions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MVCModels\MVCModels.csproj">
+      <Project>{d0d4c17e-e94a-4639-a7e7-9bee51c68f0c}</Project>
+      <Name>MVCModels</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
