--- a/Balance/MVCModels/MVCModels.csproj
+++ b/Balance/MVCModels/MVCModels.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5EBEEC06-8808-4B0E-BB39-FB39D9944F81}</ProjectGuid>
+    <ProjectGuid>{D0D4C17E-E94A-4639-A7E7-9BEE51C68F0C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RepositoryAbstraction</RootNamespace>
-    <AssemblyName>RepositoryAbstraction</AssemblyName>
+    <RootNamespace>MVCModels</RootNamespace>
+    <AssemblyName>MVCModels</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -52,17 +52,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IGroupRepository.cs" />
+    <Compile Include="Models\AddGroupModel.cs" />
+    <Compile Include="Models\GroupListItemModel.cs" />
+    <Compile Include="Models\GroupModel.cs" />
+    <Compile Include="Models\IndexModel.cs" />
+    <Compile Include="Models\PaymentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Entities\Entities.csproj">
-      <Project>{49c11c4f-ce86-4c0f-bc7b-b68d690cda25}</Project>
-      <Name>Entities</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
