--- a/Balance/Balance/Balance.csproj
+++ b/Balance/Balance/Balance.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Models\IndexModel.cs" />
     <Compile Include="Models\PaymentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ObjectIdBinder.cs" />
     <Compile Include="ViewModels\AddGroupViewModel.cs" />
     <Compile Include="ViewModels\GroupViewModel.cs" />
     <Compile Include="ViewModels\IndexViewModel.cs" />
