--- a/Balance/MVCModels/MVCModels.csproj
+++ b/Balance/MVCModels/MVCModels.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Models\GroupListItemModel.cs" />
     <Compile Include="Models\GroupModel.cs" />
     <Compile Include="Models\IndexModel.cs" />
+    <Compile Include="Models\PaymentListItemModel.cs" />
     <Compile Include="Models\PaymentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
