--- a/Balance/RepositoryAbstraction/RepositoryAbstraction.csproj
+++ b/Balance/RepositoryAbstraction/RepositoryAbstraction.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IGroupRepository.cs" />
+    <Compile Include="IUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
