--- a/Balance/MongoDB/MongoDB.csproj
+++ b/Balance/MongoDB/MongoDB.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbGroupRepository.cs" />
+    <Compile Include="DbUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
