Fixed Service to work with Users

--- a/Balance/MVCModels/MVCModels.csproj
+++ b/Balance/MVCModels/MVCModels.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Models\IndexModel.cs" />
     <Compile Include="Models\PaymentListItemModel.cs" />
     <Compile Include="Models\PaymentModel.cs" />
+    <Compile Include="Models\UserListItemModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
