--- a/Balance/ModelAbstractions/ModelAbstractions.csproj
+++ b/Balance/ModelAbstractions/ModelAbstractions.csproj
@@ -61,9 +61,17 @@
       <Project>{49c11c4f-ce86-4c0f-bc7b-b68d690cda25}</Project>
       <Name>Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MongoDB\MongoDB.csproj">
+      <Project>{b5a5959a-1997-45c3-9376-11e11f74ab5b}</Project>
+      <Name>MongoDB</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MVCModels\MVCModels.csproj">
       <Project>{d0d4c17e-e94a-4639-a7e7-9bee51c68f0c}</Project>
       <Name>MVCModels</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RepositoryAbstraction\RepositoryAbstraction.csproj">
+      <Project>{5ebeec06-8808-4b0e-bb39-fb39d9944f81}</Project>
+      <Name>RepositoryAbstraction</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
