--- a/Balance/MVCModels/MVCModels.csproj
+++ b/Balance/MVCModels/MVCModels.csproj
@@ -54,6 +54,9 @@
   <ItemGroup>
     <Compile Include="Models\AddGroupModel.cs" />
     <Compile Include="Models\AddUserToGroupModel.cs" />
+    <Compile Include="Models\CountListItemModel.cs" />
+    <Compile Include="Models\CountModel.cs" />
+    <Compile Include="Models\CreditModel.cs" />
     <Compile Include="Models\GroupListItemModel.cs" />
     <Compile Include="Models\GroupModel.cs" />
     <Compile Include="Models\IndexModel.cs" />
