--- a/Balance/Balance/Balance.csproj
+++ b/Balance/Balance/Balance.csproj
@@ -247,6 +247,10 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Converter\Converter.csproj">
+      <Project>{9aedb7e8-d2cd-4779-9dc8-6c9a549dcf41}</Project>
+      <Name>Converter</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ModelAbstractions\ModelAbstractions.csproj">
       <Project>{8158cb35-ea38-4e55-ba8a-56867c063cf6}</Project>
       <Name>ModelAbstractions</Name>
